Final cleanup and adjustments.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=quora.com">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Quote machine</title>
+	<title>Quote Generator</title>
 </head>
 
 <body>
 	<div class="quote-container" id="quote-container">
 		<!-- Quote -->
-		<div clasS="quote-text">
+		<div class="quote-text">
 			<i class="fas fa-quote-left"></i>
 			<span id="quote"></span>
 		</div>
